; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/i2c/extr_nvd0.c_nvd0_i2c_sense_scl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/i2c/extr_nvd0.c_nvd0_i2c_sense_scl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_i2c_port = type { i32 }
%struct.nv50_i2c_priv = type { i32 }
%struct.nv50_i2c_port = type { i32 }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nouveau_i2c_port*)* @nvd0_i2c_sense_scl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvd0_i2c_sense_scl(%struct.nouveau_i2c_port* %0) #0 {
  %2 = alloca %struct.nouveau_i2c_port*, align 8
  %3 = alloca %struct.nv50_i2c_priv*, align 8
  %4 = alloca %struct.nv50_i2c_port*, align 8
  store %struct.nouveau_i2c_port* %0, %struct.nouveau_i2c_port** %2, align 8
  %5 = load %struct.nouveau_i2c_port*, %struct.nouveau_i2c_port** %2, align 8
  %6 = call %struct.TYPE_2__* @nv_object(%struct.nouveau_i2c_port* %5)
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to i8*
  %10 = bitcast i8* %9 to %struct.nv50_i2c_priv*
  store %struct.nv50_i2c_priv* %10, %struct.nv50_i2c_priv** %3, align 8
  %11 = load %struct.nouveau_i2c_port*, %struct.nouveau_i2c_port** %2, align 8
  %12 = bitcast %struct.nouveau_i2c_port* %11 to i8*
  %13 = bitcast i8* %12 to %struct.nv50_i2c_port*
  store %struct.nv50_i2c_port* %13, %struct.nv50_i2c_port** %4, align 8
  %14 = load %struct.nv50_i2c_priv*, %struct.nv50_i2c_priv** %3, align 8
  %15 = load %struct.nv50_i2c_port*, %struct.nv50_i2c_port** %4, align 8
  %16 = getelementptr inbounds %struct.nv50_i2c_port, %struct.nv50_i2c_port* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @nv_rd32(%struct.nv50_i2c_priv* %14, i32 %17)
  %19 = and i32 %18, 16
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  ret i32 %23
}

declare dso_local %struct.TYPE_2__* @nv_object(%struct.nouveau_i2c_port*) #1

declare dso_local i32 @nv_rd32(%struct.nv50_i2c_priv*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
